added name to title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="script.js"></script>
         <script type="text/javascript" src="sketch.js"></script>
         <link rel="stylesheet" href="style.css" type="text/css" />
-        <title>Indiae's p5js App </title>
+        <title>Indiae's RGB Color Slider </title>
     </head>
     <body>
         
